# covviz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md  basic_usage.py  generate_readme_images.py
src/covviz/: __init__.py  api.py  layout.py  validation.py
src/covviz/plots/: __init__.py  chord.py  contour.py  covariance_graph.py  heatmap.py  network.py  sparsity.py
tests/: test_covviz.py
