[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covviz"
version = "0.1.0"
description = "Adaptive visualization tools for symmetric covariance-like matrices."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "covviz contributors" }
]
keywords = ["covariance", "matrix", "visualization", "matplotlib", "networkx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "matplotlib>=3.6",
  "networkx>=2.8",
  "numpy>=1.23",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = ["pytest>=7", "pandas>=1.5"]

[project.urls]
Homepage = "https://github.com/yixinyan77/covviz"
Issues = "https://github.com/yixinyan77/covviz/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
